--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "^3.3.0",
-    "tailwind": "^4.0.0"
+    "react-scripts": "^3.3.0"
   },
   "scripts": {
     "build:css": "postcss src/styles/index.css -o src/index.css",
