--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "react-dom": "^16.12.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0"
+    "react-redux": "^5.0.6",
+    "react-scripts": "3.2.0",
+    "redux": "^3.7.2"
   },
   "scripts": {
     "build-css": "postcss src/styles/index.css -o src/index.css",
