--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-redux": "^5.0.6",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
-    "react-redux": "^5.0.6",
     "react-scripts": "3.2.0",
-    "redux": "^3.7.2"
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "build-css": "postcss src/styles/index.css -o src/index.css",
