--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
   "scripts": {
     "build-css": "postcss src/styles/index.css -o src/index.css",
     "watch-css": "postcss src/styles/index.css -o src/index.css -w",
-    "start-js": "react-scripts start",
-    "start": "npm-run-all -p watch-css start-js",
+    "start": "react-scripts start",
+    "start-css": "npm-run-all -p watch-css start-js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
